@@ -74,18 +74,13 @@ extern	qboolean	is_progs_v6;
  * a file named "maplist.txt" in its searchpath and using the info in it,
  * it will load a map-specific prog file. Without this, the rider bosses
  * shall not appear in the original Hexen2. The mission pack & HexenWorld
- * uses a single prog file, so they don't need this.
- * 2006-03-31: We now use a single binary for both original hexen2 and
- * for the mission pack. So we enable it even for the mission pack, but
- * we place a maplist.txt file with a 0 in it in the portals directory.
- * If you wish to compile progs.dat and progs2.dat together into a single
- * progs.dat for original Hexen2, then keep the definition below intact,
- * but put a maplist.txt file with only a 0 in it in the data1 directory.
- * This way, if you find an old mod which uses multiple progs.dat files,
- * it will continue to work properly. */
+ * uses a single prog file and don't need this.
+ * When progs.dat exists (it usually does), uHexen2 accepts maplist.txt
+ * only if it is from the same game directory as progs.dat itself or if
+ * it is from a searchpath with a higher priority. */
 #define	USE_MULTIPLE_PROGS	1
 
-/* USE_MULTIPLE_PROGS is only for original hexen2 */
+/* USE_MULTIPLE_PROGS is only for original hexen2. */
 #if defined(H2W)
 #undef	USE_MULTIPLE_PROGS
 #define	USE_MULTIPLE_PROGS	0
